CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

SET(CMAKE_C_COMPILER g++)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/include)
SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/include)
SET(MAIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/main)

SET(ALLFILES ${SRC_DIR}
			 ${MAIN_DIR})
			 
LINK_LIBRARIES(dl pthread stdc++11)
SET(out "pb2js.exe")

ADD_EXECUTABLE(${out} ${ALLFILES})